data/derived/fa15/progs/unify/prog4018.ml.out
Characters 20-23:
  let _ = matchHeads ["b"; "o"; "b"];;
                      ^^^
Error: This expression has type string but an expression was expected of type
         'a list
